actually split service from deployment
