# libs/cli-kontrol-api/api/golang/types/types.gen.go
@@ -23,6 +23,11 @@ type ClusterTopology struct {
 	Nodes []Node `json:"nodes"`
 }
 
+// DeploymentConfig defines model for DeploymentConfig.
+type DeploymentConfig struct {
+	Deployment appv1.Deployment `json:"deployment"`
+}
+
 // Edge defines model for Edge.
 type Edge struct {
 	// Label Label for the edge.
@@ -70,6 +75,7 @@ type IngressConfig struct {
 
 // MainClusterConfig defines model for MainClusterConfig.
 type MainClusterConfig struct {
+	DeploymentConfigs  *[]DeploymentConfig  `json:"deployment-configs,omitempty"`
 	GatewayConfigs     *[]GatewayConfig     `json:"gateway-configs,omitempty"`
 	IngressConfigs     *[]IngressConfig     `json:"ingress-configs,omitempty"`
 	Namespace          *string              `json:"namespace,omitempty"`
@@ -110,8 +116,7 @@ type RouteConfig struct {
 
 // ServiceConfig defines model for ServiceConfig.
 type ServiceConfig struct {
-	Deployment appv1.Deployment `json:"deployment"`
-	Service    corev1.Service   `json:"service"`
+	Service corev1.Service `json:"service"`
 }
 
 // StatefulSetConfig defines model for StatefulSetConfig.
